--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="root"></div>
     <% for (var js of htmlWebpackPlugin.files.js) { %>
-    <script src="<%= js %>"></script>
+    <script type="module" src="<%= js %>"></script>
     <% } %>
   </body>
 </html>
